# pit

./: .gitignore  .golangci.yml  Cargo.toml  OWNERS  README.md  justfile  pipeline.just  requirements.txt
bindings/cpp/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  DoxygenMainPage.md  README.md
bindings/cpp/cmake/: OpenPitConfig.cmake.in  OpenPitDownloadRuntime.cmake
bindings/cpp/include/openpit/: account_adjustment.hpp  account_id.hpp  accounts.hpp  adapters.hpp  async_engine.hpp  bytes.hpp  engine.hpp  error.hpp  fwd.hpp  marketdata.hpp  model.hpp  openpit.hpp  param.hpp  reject.hpp  runtime.hpp  string.hpp
bindings/cpp/include/openpit/asyncengine/: engine.hpp  future.hpp  observer.hpp  strategy.hpp  typed.hpp
bindings/cpp/include/openpit/detail/: callback_error.hpp  handle.hpp
bindings/cpp/include/openpit/marketdata/: account_info.hpp  instrument_id.hpp  quote.hpp  service.hpp
bindings/cpp/include/openpit/pretrade/: context.hpp  custom_policy.hpp  policies.hpp  pretrade.hpp  (+1 more)
bindings/cpp/test/: CMakeLists.txt  account_adjustment_test.cpp  accounts_test.cpp  async_engine_test.cpp  engine_test.cpp  examples_readme_test.cpp  marketdata_test.cpp  model_test.cpp  pretrade_test.cpp  smoke_test.cpp  typed_async_engine_test.cpp
bindings/cpp/test/wiki/: CMakeLists.txt  account_adjustments_test.cpp  account_blocking_test.cpp  account_groups_test.cpp  balance_reconciliation_test.cpp  custom_cpp_types_test.cpp  domain_types_test.cpp  dynamic_policy_reconfiguration_test.cpp  getting_started_test.cpp  market_data_pricing_test.cpp  market_data_test.cpp  market_data_ttl_test.cpp  non_mutating_dry_run_test.cpp  policies_test.cpp  policy_api_test.cpp  pre_trade_lock_test.cpp  pre_trade_pipeline_test.cpp  spot_funds_test.cpp
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/docs/: concepts.md  conf.py  index.md  quickstart.md
bindings/python/docs/api/: index.md
bindings/python/docs/examples/: index.md
bindings/python/docs/guides/: account-adjustments.md  engine.md  errors.md  policies.md  threading.md
bindings/python/python/openpit/: .gitignore  __init__.py  _openpit.pyi  account_adjustment.py  account_adjustment.pyi  core.py  core.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: conftest.py
bindings/python/tests/integration/: test_account_adjustment_integration.py  test_engine_integration.py  test_examples_market_data.py  test_examples_readme.py  test_examples_wiki.py  test_spot_funds_reservation_incoming.py
bindings/python/tests/unit/: test_account_adjustment.py  test_account_adjustment_batch.py  test_configurator.py  test_custom_order_models.py  test_dry_run.py  test_engine.py  test_engine_shortcuts.py  test_entity_paths.py  test_execution_report.py  test_missing_required_fields.py  test_order.py  test_policy_api.py  test_policy_interleaving.py  test_request_reservation.py  test_results_rejects.py  test_start_policies.py
crates/openpit/: Cargo.toml  README.md
crates/openpit-derive/: Cargo.toml  README.md
crates/openpit-ffi/: Cargo.toml
crates/openpit-ffi/src/: account_adjustment.rs  engine.rs  execution_report.rs  instrument.rs  last_error.rs  lib.rs  macros.rs  order.rs  param.rs  policy.rs  pre_trade_lock.rs  reject.rs  string.rs
crates/openpit-ffi/src/policy/: custom.rs  mod.rs  order_size_limit.rs  pnl_bounds_killswitch.rs  rate_limit.rs  spot_funds.rs
crates/openpit-interop/: Cargo.toml
crates/openpit-interop/src/: account_adjustment_amount.rs  account_adjustment_bounds.rs  account_adjustment_operation.rs  execution_report_fill.rs  execution_report_operation.rs  execution_report_position_impact.rs  financial_impact.rs  lib.rs  order_margin.rs  order_operation.rs  order_position.rs  request.rs  sync_mode.rs  sync_policy.rs
crates/openpit/src/: lib.rs
crates/openpit/src/core/: account_adjustment.rs  account_key.rs  configure.rs  engine.rs  engine_builder.rs  engine_locking.rs  instrument.rs  mod.rs  order.rs  request_trait.rs  sync_policy.rs
crates/openpit/src/param/: asset.rs  cash_flow.rs  fee.rs  mod.rs  pnl.rs  position_size.rs  price.rs  quantity.rs  side.rs  volume.rs
crates/openpit/src/pretrade/: configurable.rs  context.rs  dry_run_report.rs  handles.rs  mod.rs  mutations.rs  policy.rs  reject.rs  report.rs  request.rs  reservation.rs  start_pre_trade_time.rs
crates/openpit/src/storage/: builder.rs  config_cell.rs  key_bound.rs  mod.rs  policy.rs  storage.rs  tests.rs
crates/openpit/tests/: account_adjustment_integration.rs  account_sync_compile_check_works.rs  configure_integration.rs  derive_feature_e2e.rs  examples_market_data.rs  examples_readme.rs  examples_wiki.rs  marketdata.rs  multithread_full_sync.rs  multithread_full_sync_engine.rs  multithread_full_sync_per_account_counter.rs  multithread_full_sync_pnl_killswitch.rs  pretrade_scenario.rs  spot_funds.rs
e2e/clients/cpp/: CMakeLists.txt  main.cpp
examples/cpp/: .gitignore  CMakeLists.txt
examples/cpp/rate_pnl_killswitch/: CMakeLists.txt  README.md  killswitch.hpp  main.cpp
examples/cpp/rate_pnl_killswitch/test/: killswitch_test.cpp
examples/cpp/spot_funds/: CMakeLists.txt  README.md
examples/cpp/spot_funds/src/: main.cpp  spot_funds.hpp
examples/cpp/spot_funds/test/: smoke_test.cpp
examples/cpp/spot_loadtest/: .gitignore  CMakeLists.txt  README.md  sample_report.txt
examples/cpp/spot_loadtest/configs/: baseline.ini
examples/cpp/spot_loadtest/src/: cohort.cpp  config.cpp  decimal.cpp  driver.cpp  driver_build.hpp  driver_oracle.cpp  driver_oracle.hpp  env.cpp  event.cpp  generator.cpp  histogram.cpp  ledger.cpp  lifecycle.cpp  main.cpp  measurement.cpp  progress.cpp  reporter.cpp  rng.cpp  sha256.cpp
examples/cpp/spot_loadtest/test/: config_test.cpp  driver_test.cpp  generator_test.cpp  measurement_test.cpp  progress_test.cpp  reporter_test.cpp
examples/cpp/spot_table/: .gitignore  CMakeLists.txt  README.md  builder.cpp  builder.hpp  duration.cpp  duration.hpp  main.cpp  main_test.cpp  marketdata.cpp  marketdata.hpp  platform.cpp  platform.hpp  runner.cpp  runner.hpp  table.cpp  table.hpp
(+831 files in other folders)
