[workspace]
resolver = "2"
members = [
    "bindings/python",
    "crates/openpit",
    "crates/openpit-derive",
    "crates/openpit-ffi",
    "crates/openpit-interop",
]

[workspace.metadata.release]
shared-version = true
tag-prefix = ""
tag-message = "Release {{version}}"
pre-release-commit-message = "Release {{version}}"
push = false
publish = false

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
