[package]
name = "openpit-python"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
publish = false
license = "Apache-2.0"
repository = "https://github.com/openpitkit/pit"
description = "Python bindings for the openpit crate"

[features]
default = []
extension-module = ["pyo3/extension-module"]

[lib]
name = "_openpit"
crate-type = ["cdylib"]
test = false

[dependencies]
openpit = { version = "0.1.1", path = "../../crates/openpit" }
pyo3 = { version = "0.22", features = ["abi3-py39", "generate-import-lib"] }
