[package]
name = "openpit-python"
version = "0.4.0"
edition = "2021"
rust-version = "1.78"
publish = false
license = "Apache-2.0"
repository = "https://github.com/openpitkit/pit"
description = "Python bindings for the openpit crate"

[features]
default = []
extension-module = ["pyo3/extension-module"]

[lib]
name = "_openpit"
crate-type = ["cdylib"]

[dependencies]
openpit = { version = "0.4.0", path = "../../crates/openpit", features = [
  "serde",
] }
openpit-interop = { version = "0.4.0", path = "../../crates/openpit-interop" }
pyo3 = { version = "0.29", features = [
  "abi3-py310",
  "generate-import-lib",
] } # Python 3.10
rust_decimal = "1.41.0"
serde_json = "1"
rmp-serde = "1"
ciborium = "0.2"
