[package]
name = "openpit-derive"
version = "0.3.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
repository = "https://github.com/openpitkit/pit"
description = "Proc-macro derives for openpit"
readme = "README.md"
keywords = ["openpit", "proc-macro", "derive", "trading", "finance"]
categories = ["development-tools::procedural-macro-helpers", "finance"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
trybuild = "1"
