[package]
name = "openpit-interop"
version = "0.4.0"
edition = "2021"
publish = false
license = "Apache-2.0"
repository = "https://github.com/openpitkit/pit"
description = "Runtime interoperability layer for OpenPit language bindings"

[dependencies]
arc-swap = "1"
openpit = { version = "0.4.0", path = "../openpit" }
