[package]
name = "openpit"
version = "0.3.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
repository = "https://github.com/openpitkit/pit"
description = "Embeddable pre-trade risk SDK"
readme = "README.md"
keywords = ["pre-trade", "risk-management", "trading", "algotrading", "fintech"]
categories = ["finance"]

[features]
default = []
derive = ["dep:openpit-derive"]
serde = ["dep:serde", "rust_decimal/serde", "smol_str/serde"]

[dependencies]
openpit-derive = { path = "../openpit-derive", version = "=0.3.0", optional = true }
parking_lot = "0.12"
rust_decimal = "1.41"
serde = { version = "1", features = ["derive"], optional = true }
smol_str = "0.3"

[package.metadata.release]
pre-release-replacements = [
  { file = "../../bindings/go/internal/loader/loader.go", search = 'const SDKVersion = "[0-9]+\.[0-9]+\.[0-9]+"', replace = "const SDKVersion = \"{{version}}\"", exactly = 1 },
  { file = "../../examples/go/rate_pnl_killswitch/go.mod", search = 'require go\.openpit\.dev/openpit v[0-9]+\.[0-9]+\.[0-9]+', replace = "require go.openpit.dev/openpit v{{version}}", exactly = 1 },
]
